tests/fail/semantics/construct_inheritance_cycle/main.kira
// Construct inheritance must form a directed acyclic graph. `A extends B` and
// `B extends A` close a cycle, which the compiler rejects.

construct A extends B {
}

construct B extends A {
}

@Main
function main() {
    return
}
